Added nav links

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
           <li><a href="#benefits">Benefits</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#about">About Us</a></li>
+          <li><a href="#about">Pricing</a></li>
+          <li><a href="#about">Contact</a></li>
         </ul>
       </nav>
       <div class="jumbotron" id="home">
@@ -32,25 +34,14 @@
       <div class="container" id="about">
         <article>
           <h1><span class="title">What is Onigashima Project?</span></h1>
-          <p>
-            Onigashima Project is a travel agency which was founded in 2013 and
-            based in Bandung, we provides services to explore the beauty in
-            every corner of Japan. We provide services such as airline tickets,
-            lodging, vehicles, tour guides and other services. Tourists can
-            visit downtown Tokyo, thousands of temples in Kyoto, or feel the
-            experience of climbing the mountains of Fuji.
-          </p>
+          <p>Onigashima Project is a travel agency which was founded in 2013 and based in Bandung, we provides services to explore the beauty in every corner of Japan. We provide services such as airline tickets, lodging, vehicles, tour guides and other services. Tourists can visit downtown Tokyo, thousands of temples in Kyoto, or feel the experience of climbing the mountains of Fuji.</p>
         </article>
         <aside class="profile">
           <img src="assets/images/profile.jpg" alt="" />
           <div class="info">
             <h1>Founder - CEO</h1>
             <h1>Your Name</h1>
-            <p>
-              The best and most beautiful things in the world cannot be seen or
-              even touched — they must be felt with the heart. <br />-Helen
-              Keller
-            </p>
+            <p>The best and most beautiful things in the world cannot be seen or even touched — they must be felt with the heart. <br />-Helen Keller</p>
           </div>
         </aside>
       </div>
@@ -60,44 +51,27 @@
           <div class="box">
             <h1>1</h1>
             <p>Easy Schedule</p>
-            <p class="desc">
-              You can choose departure and return schedules in one package or
-              reschedule without any cost deduction in minutes via the website
-              or mobile application
-            </p>
+            <p class="desc">You can choose departure and return schedules in one package or reschedule without any cost deduction in minutes via the website or mobile application</p>
           </div>
           <div class="box">
             <h1>2</h1>
             <p>Include Visa</p>
-            <p class="desc">
-              The travel package includes administrative fees such as taxes and
-              visas
-            </p>
+            <p class="desc">The travel package includes administrative fees such as taxes and visas</p>
           </div>
           <div class="box">
             <h1>3</h1>
             <p>Insurance</p>
-            <p class="desc">
-              The fee includes an insurance package that can protect you while
-              traveling, so you can vacation in peace
-            </p>
+            <p class="desc">The fee includes an insurance package that can protect you while traveling, so you can vacation in peace</p>
           </div>
           <div class="box">
             <h1>4</h1>
             <p>Single or Group</p>
-            <p class="desc">
-              You can book a private travel package or a group trip which is
-              perfect to enjoy with friends or family
-            </p>
+            <p class="desc">You can book a private travel package or a group trip which is perfect to enjoy with friends or family</p>
           </div>
           <div class="box">
             <h1>5</h1>
             <p>Gift and Discount</p>
-            <p class="desc">
-              There are lots of attractive prizes and promos that you can enjoy
-              in every travel package, such as discounts, food or lodging
-              vouchers
-            </p>
+            <p class="desc">There are lots of attractive prizes and promos that you can enjoy in every travel package, such as discounts, food or lodging vouchers</p>
           </div>
         </div>
       </div>
